# LDT-2024

./: .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  get_runner.sh  manage.py  pyproject.toml  setup.cfg
backend/account/: serializers.py  urls.py  views.py
backend/api/: base.py  generators.py  permissions.py  urls.py  views.py
backend/api/templates/api/: elements.html
backend/django_app/: asgi.py  celery.py  urls.py  wsgi.py
backend/django_app/settings/: __init__.py  advanced_settings.py  celery.py  settings.py
backend/location/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/location/migrations/: 0001_initial.py  0002_file_markdown.py  0003_file_processing_file_alter_file_markdown.py
backend/location/upload/: models.py  serializers.py  views.py
backend/runner/: django_run_celery.sh  django_run_celery_base.sh
config/: nginx.conf
config/templates/: base.locations
cv/: Makefile  requirements.txt
cv/configs/: detector_cfg.yaml
cv/src/: config.py  detector.py
cv/weights/: best.pt  best_model2.pt
frontend/: .env  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile  components.json  index.html  package.json  prettier.config.js  run_front.sh  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
frontend/src/_auth/: index.tsx
frontend/src/api/: auth.ts  axios.ts  camera.ts  file.ts  index.ts  location.ts
frontend/src/constants/: app-config.ts
frontend/src/routes/: __root.tsx  _protected.tsx  _public.tsx  (+1 more)
(+69 files in other folders)
