[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-environ = "^0.11.2"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"
drf-yasg = "^1.21.7"
drf-spectacular = "^0.27.2"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
drf-writable-nested = "^0.7.0"
celery = "^5.4.0"
redis = "^5.0.5"
drf-chunked-upload = "^0.6.0"
django-typomatic = "^2.5.1"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
opencv-python = "^4.10.0.82"
django-filter = "^24.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.autoflake]
check = false
imports = ["django", "celery"]

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["migrations"]
skip = ["migrations"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]